--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^0.2.0",
+    "@tailwindcss/forms": "^0.2.1",
     "autoprefixer": "^10.1.0",
     "next": "10.0.4",
     "postcss": "^8.2.1",
