--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@headlessui/react": "^0.2.0",
     "@tailwindcss/forms": "^0.2.1",
     "autoprefixer": "^10.1.0",
+    "axios": "^0.21.1",
     "next": "10.0.4",
     "postcss": "^8.2.1",
     "react": "17.0.1",
